<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>hu.bme.mit.incqueryd</groupId>
	<artifactId>hu.bme.mit.incqueryd.tooling.parent</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<tycho.version>0.20.0</tycho.version>
		<tycho.extras.version>0.20.0</tycho.extras.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.showWarnings>true</maven.compiler.showWarnings>
		<incquery.update.site>http://download.eclipse.org/incquery/updates/release</incquery.update.site>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<strictBinIncludes>false</strictBinIncludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<pomDependencies>consider</pomDependencies>
					<target>
						<artifact>
							<groupId>hu.bme.mit.incqueryd</groupId>
							<artifactId>hu.bme.mit.incqueryd.tooling.targetplatform</artifactId>
							<version>1.0.0-SNAPSHOT</version>
						</artifact>
					</target>
					<environments>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>hu.bme.mit.incqueryd</groupId>
			<artifactId>hu.bme.mit.incqueryd.arch</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
	</dependencies>
	<repositories>

		<repository>
			<id>kepler</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/releases/kepler</url>
		</repository>
		<repository>
			<id>incquery</id>
			<layout>p2</layout>
			<url>${incquery.update.site}</url>
		</repository>
		<repository>
			<id>emf</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/modeling/emf/emf/updates/releases/</url>
		</repository>
		<repository>
			<id>xtext</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/</url>
		</repository>
		<repository>
			<id>ghillairet</id>
			<layout>p2</layout>
			<url>http://ghillairet.github.io/p2/</url>
		</repository>
		
	</repositories>

	<modules>
		<module>../lib/org.mozilla.javascript</module>
		<module>../lib/org.openrdf.sesame</module>
		<module>hu.bme.mit.incqueryd.tooling.targetplatform</module>
		<module>hu.bme.mit.incqueryd.rdf</module>
		<module>org.eclipse.incquery.patternlanguage.rdf</module>
		<module>org.eclipse.incquery.patternlanguage.rdf.generator.recipe</module>
		<module>org.eclipse.incquery.patternlanguage.rdf.psystem</module>
		<module>org.eclipse.incquery.patternlanguage.rdf.tests</module>
		<module>org.eclipse.incquery.patternlanguage.rdf.ui</module>
		<module>hu.bme.mit.incqueryd.arch.language</module>
		<module>hu.bme.mit.incqueryd.arch.language.tests</module>
		<module>hu.bme.mit.incqueryd.arch.language.ui</module>
		<module>hu.bme.mit.incqueryd.tooling.main</module>
		<module>hu.bme.mit.incqueryd.tooling.product</module>
	</modules>
</project>